# tlmn-project

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  TODO
doc/: Doxyfile  README.md
doc/html/: TextMiningApp_8hh_source.html  TextMiningCompiler_8hh_source.html  annotated.html  classTrie-members.html  classTrie.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html
doc/html/search/: searchdata.js
doc/latex/: annotated.tex  classTrie.tex  dir_09e761304027c904456130627fd4dcf5.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.tex  structelement.tex
includes/: TextMiningApp.hh  TextMiningCompiler.hh  Trie.hh
src/: TextMiningApp.cc  TextMiningCompiler.cc  Trie.cc
tests/: commands.txt  test.sh
